--- a/backend/.env
+++ b/backend/.env
@@ -1,5 +1,5 @@
 PORT = 3000
-MONGODB_URI = mongodb://localhost:27017/vet
+MONGODB_URI = mongodb://localhost:27017/epmtpq
 MONGODB_URI_PRODUCTION = TUS_CREDENCIALES
 
 // SMTP DE GMAIL
