super-administrador y admiistrador

--- a/backend/.env
+++ b/backend/.env
@@ -12,3 +12,7 @@ URL_BACKEND = http://localhost:5000/api/
 URL_FRONTEND = http://localhost:5173/
 
 JWT_SECRET = AbfksoDdadad234856
+
+// Credenciales Super Administrador
+SUPER_ADMIN_EMAIL = super.administrador@epmtpq.goc.ec
+SUPER_ADMIN_PASSWORD = Super@Admin*1534-Quito
